[package]
name = "libgraft"
version = "0.1.1"
edition = "2021"
description = "A library that grafts various functions onto std & friends. Mostly intended for personal development ergonomics."
license = "LGPL-3.0-or-later"
repository = "https://github.com/crabdancing/libgraft"


[dependencies]
log = "0.4.26"
